--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,70 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+<ion-header>
+    <ion-toolbar style="--background: #cc0000; --color:#f2f2f2">
+        <ion-thumbnail slot="start">
+            <ion-img src="assets/favicon.png"></ion-img>
+        </ion-thumbnail>
+      <ion-title>Vocab Booster | Home</ion-title>
+      <ion-buttons slot="end">
+          <ion-button (click)="authService.logout()">
+              LOGOUT
+            </ion-button>
+      </ion-buttons>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-content [fullscreen]="true">
+    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
+  <ion-list *ngIf="!loading" lines="none">
+    <ion-item *ngFor="let word of words" >
+        <ion-card style="min-width: 200px; width: auto">
+          <ion-card-header>
+            <ion-card-title>{{word.name}}</ion-card-title>
+            <ion-card-subtitle>{{word.meaning}}</ion-card-subtitle>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-item>
+              <h5>Sentences:</h5>
+              <ion-card *ngFor="let sentence of word.sentence" style="width: auto; height: auto">
+                  <ion-card-content>{{sentence.tag}}</ion-card-content>
+              </ion-card>
+            </ion-item>
+            <ion-item>
+              <h5>Tags:</h5>
+              <ion-card *ngFor="let tag of word.tags" style="width: auto; height: auto">
+                  <ion-card-content>{{tag.tag}}</ion-card-content>
+              </ion-card>
+            </ion-item>
+            <ion-item>
+              <h5>Types:</h5>
+              <ion-card *ngFor="let type of word.types" style="width: auto; height: auto">
+                  <ion-card-content>{{type}}</ion-card-content>
+              </ion-card>
+            </ion-item>
+            <ion-item>
+                <h5>Synonyms:</h5>
+                <ion-card *ngFor="let synonym of word.synonyms" style="width: auto; height: auto">
+                    <ion-card-content>{{synonym.tag}}</ion-card-content>
+                </ion-card>
+            </ion-item>
+          </ion-card-content>
+        </ion-card>
+    </ion-item>
+  </ion-list>
+  <!-- <div class="ion-padding custom-skeleton">
+      <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+      <ion-skeleton-text animated></ion-skeleton-text>
+      <ion-skeleton-text animated style="width: 88%"></ion-skeleton-text>
+      <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
+      <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
+    </div> -->
+    <ion-list *ngIf="loading">
+      <ion-item *ngFor="let x of skeletonArray">
+        <ion-label>
+          <ion-skeleton-text animated style="width: 20%"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+    </ion-list>
 </ion-content>
+
