--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,9 +5,9 @@
         </ion-thumbnail>
       <ion-title>SHUFFLE</ion-title>
       <ion-buttons slot="end">
-          <button ion-button color="dark" large (click)="authService.logout()">
+          <ion-button color="light" large (click)="authService.logout()">
               LOGOUT
-            </button>
+            </ion-button>
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
