12/23/2020 Moved the code for header to a single component and rendering it in every other component, created a new page for adding form

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -33,7 +33,7 @@
               formControlName="password">
             </ion-input>
           </ion-item>
-          <ion-button expand="full" type="submit" [disabled]="!loginForm.valid" color="primary">LOGIN</ion-button>
+          <ion-button expand="full" type="submit" [disabled]="!loginForm.valid" style="--background-color: #cc0000">LOGIN</ion-button>
         </form>
       </ion-card-content>
     </ion-card> 
@@ -43,6 +43,6 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-title>Footer</ion-title>
+    <ion-subtitle>By: Ishaan Khurana</ion-subtitle>
   </ion-toolbar>
 </ion-footer>
