--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,34 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<app-header title="Add word"></app-header>
+<ion-content [fullscreen]="true"> 
+    <div id="container">
+        <ion-card>
+            <ion-card-header>
+              <ion-card-title>Add Word</ion-card-title>
+            </ion-card-header>
+          
+            <ion-card-content>
+              <form [formGroup]="addWordForm"> 
+                <ion-item>
+                    <ion-label position="floating">Name</ion-label>
+                    <ion-input></ion-input>
+                </ion-item>
+                <ion-item>
+                    <ion-label position="floating">Meaning</ion-label>
+                    <ion-input></ion-input>
+                </ion-item>
+                <ion-item>
+                  <ion-item>
+                    <ion-chip *ngFor="let s of sentences; let i = index;">
+                        <ion-label>{{s}}</ion-label>
+                        <ion-icon name="close-outline" (click)="removeSentence(i)"></ion-icon>
+                    </ion-chip>
+                  </ion-item>
+                    <ion-label position="floating">Sentences</ion-label>
+                    <ion-input (keyup)= "addSentence($event)" formControlName="sentence"></ion-input>
+                </ion-item>
+              </form>
+            </ion-card-content>
+          </ion-card>
+    </div>
 </ion-content>
