12/23/2020 Moved the code for header to a single component and rendering it in every other component, created a new page for adding form

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -43,6 +43,6 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-subtitle>By: Ishaan Khurana</ion-subtitle>
+    <ion-text>By: Ishaan Khurana</ion-text>
   </ion-toolbar>
 </ion-footer>
