12/30/2020 type filter added

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -30,6 +30,7 @@
           <ion-select-option value="Tags">Tags</ion-select-option>
           <ion-select-option value="Meaning">Meaning</ion-select-option>
           <ion-select-option value="Synonyms">Synonyms</ion-select-option>
+          <ion-select-option value="Type">Types</ion-select-option>
       </ion-select>
     <!-- Searchbar with cancel button shown on focus -->
     <ion-searchbar style="width: 50% !important" showCancelButton="focus" [formControl]="keyword"></ion-searchbar>
