--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,8 +2,8 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="shuffle"></ion-icon>
-      <ion-label>Shuffle</ion-label>
+      <ion-icon name="book"></ion-icon>
+      <ion-label>Your words</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
@@ -12,8 +12,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="person"></ion-icon>
+      <ion-label>Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
