01/02/2021 argument added to presentPopover()

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -15,7 +15,7 @@
       </ion-buttons>
     </ion-toolbar>
     <ion-fab vertical="top" horizontal="end" slot="fixed">
-      <ion-fab-button style="--background: #cc0000;" (click)="presentPopover()">
+      <ion-fab-button style="--background: #cc0000;" (click)="presentPopover(null)">
         <ion-icon name="list"></ion-icon>
       </ion-fab-button>
     </ion-fab>
