--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,6 +13,14 @@
           <ion-icon name="shuffle" [ngClass]="{'active-toggle' : randomFeature, 'inactive-toggle' : !randomFeature}"></ion-icon><ion-toggle style="--background-checked: #cc0000; --handle-background-checked: white;" [checked]="randomFeature" (ionChange)="randomize($event)"></ion-toggle>
         </ion-item>
       </ion-buttons>
+      <ion-buttons slot="start">
+        <ion-item *ngIf="!filtersService.isEmpty()">
+          <ion-chip style="--background: #cc0000; color: white">
+            Filters applied
+            <ion-icon style="color: white" name="close" (click)="resetForm()"></ion-icon>
+          </ion-chip>
+        </ion-item>
+      </ion-buttons>
     </ion-toolbar>
     <ion-fab vertical="top" horizontal="end" slot="fixed">
       <ion-fab-button style="--background: #cc0000;" (click)="presentPopover(null)">
