--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,20 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-header title="Profile"></app-header>
+<ion-toolbar>
+    <ion-item>
+      <form [formGroup]="dashboardForm" style="width: 100%">
+        <ion-select placeholder="Choose an option" formControlName="options" style="width: 100%">
+            <ion-select-option value="wordcloud" >Word Cloud</ion-select-option>
+        </ion-select>
+      </form>
+    </ion-item>
+</ion-toolbar>
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+    <div id="container">
+        <ion-spinner name="crescent" *ngIf="loading" style="z-index: 99000"></ion-spinner>
+        <ion-card *ngIf="dashboardForm.get('options').value === 'wordcloud' && !loading">
+            <ion-card-content>
+              <img [src]="sfurl">
+            </ion-card-content>
+          </ion-card>
+    </div>
 </ion-content>
