01/04/2021 more features added to the dashboard component

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -88,7 +88,7 @@
     </ion-list>
     <ion-infinite-scroll threshold="100px" (ionInfinite)="loadMore($event)">
       <ion-infinite-scroll-content
-        loadingSpinner="bubbles"
+        loadingSpinner="crescent"
         loadingText="Loading more data...">
       </ion-infinite-scroll-content>
     </ion-infinite-scroll>
