--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,7 +10,7 @@
 <ion-content>
 
   <div id="container">
-    <ion-card>
+    <ion-card *ngIf="!loading"> 
       <ion-card-header>
         <ion-card-title>Login</ion-card-title>
       </ion-card-header>
@@ -37,6 +37,7 @@
         </form>
       </ion-card-content>
     </ion-card> 
+    
   </div>
 
 </ion-content>
