01/05/2021 loading functionality added to more components

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -10,7 +10,10 @@
     </ion-item>
 </ion-toolbar>
 <ion-content [fullscreen]="true">
-        <ion-spinner name="crescent" *ngIf="loading" style="z-index: 99000"></ion-spinner>
+
+        <div id="container">
+            <ion-spinner name="crescent" *ngIf="loading" style="z-index: 99000"></ion-spinner>
+        </div>
         <ion-card *ngIf="dashboardForm.get('options').value === 'wordcloud' && !loading">
             <ion-card-content>
               <img [src]="sfurl">
