01/06/2021 fixed filters service and added scrollToTop() functionality on random and sort methods

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,7 +9,7 @@
         </ion-item>
       </ion-buttons>
       <ion-buttons slot="start">
-        <ion-item *ngIf="!filtersService.isEmpty()">
+        <ion-item *ngIf="filtered">
           <ion-chip style="--background: #cc0000; color: white">
             Filters applied
             <ion-icon style="color: white" name="close" (click)="resetForm()"></ion-icon>
