--- a/src/app/filter/filter.page.html
+++ b/src/app/filter/filter.page.html
@@ -5,37 +5,37 @@
     </ion-card-title>
   </ion-card-header>
   <ion-card-content>
-    <form [formGroup]="filtersService.filterForm">
+    <form [formGroup]="filterForm">
       <ion-list>
           <ion-item>
             <ion-label>Name: </ion-label>
-            <ion-input formControlName="name" [disabled]="!filtersService.name " placeholder="Type a word"></ion-input>
-            <ion-toggle [checked]="filtersService.name" class="checked-toggle" (ionChange)="filtersService.setName($event)"></ion-toggle>
+            <ion-input formControlName="name" [disabled]="!name " placeholder="Type a word"></ion-input>
+            <ion-toggle [checked]="name" class="checked-toggle" (ionChange)="setName($event)"></ion-toggle>
           </ion-item>
           <ion-item>
             <ion-label>Meaning: </ion-label>
-            <ion-input formControlName="meaning" [disabled]="!filtersService.meaning " placeholder="Type the meaning"></ion-input>
-            <ion-toggle [checked]="filtersService.meaning" class="checked-toggle" (ionChange)="filtersService.setMeaning($event)"></ion-toggle>
+            <ion-input formControlName="meaning" [disabled]="!meaning " placeholder="Type the meaning"></ion-input>
+            <ion-toggle [checked]="meaning" class="checked-toggle" (ionChange)="setMeaning($event)"></ion-toggle>
           </ion-item>
             <ion-item>
               <ion-label>Sentence: </ion-label>
-              <ion-input formControlName="sentence" [disabled]="!filtersService.sentence " placeholder="Type a sentence"></ion-input>
-              <ion-toggle [checked]="filtersService.sentence" class="checked-toggle" (ionChange)="filtersService.setSentence($event)"></ion-toggle>
+              <ion-input formControlName="sentence" [disabled]="!sentence " placeholder="Type a sentence"></ion-input>
+              <ion-toggle [checked]="sentence" class="checked-toggle" (ionChange)="setSentence($event)"></ion-toggle>
             </ion-item>
               <ion-item>
                 <ion-label>Tag: </ion-label>
-                <ion-input formControlName="tag" [disabled]="!filtersService.tag " placeholder="Type a tag"></ion-input>
-                <ion-toggle [checked]="filtersService.tag" class="checked-toggle" (ionChange)="filtersService.setTag($event)"></ion-toggle>
+                <ion-input formControlName="tag" [disabled]="!tag " placeholder="Type a tag"></ion-input>
+                <ion-toggle [checked]="tag" class="checked-toggle" (ionChange)="setTag($event)"></ion-toggle>
               </ion-item>
                 <ion-item>
                   <ion-label>Synonym: </ion-label>
-                  <ion-input  formControlName="synonym" [disabled]="!filtersService.synonym "  placeholder="Type a synonym"></ion-input>
-                  <ion-toggle [checked]="filtersService.synonym" class="checked-toggle" (ionChange)="filtersService.setSynonym($event)"></ion-toggle>
+                  <ion-input  formControlName="synonym" [disabled]="!synonym "  placeholder="Type a synonym"></ion-input>
+                  <ion-toggle [checked]="synonym" class="checked-toggle" (ionChange)="setSynonym($event)"></ion-toggle>
                 </ion-item>
                   <ion-item>
                     <ion-label>Type: </ion-label>
-                    <ion-input formControlName="type" [disabled]="!filtersService.type " placeholder="What kind of word is it?"></ion-input>
-                    <ion-toggle [checked]="filtersService.type" class="checked-toggle" (ionChange)="filtersService.setType($event)"></ion-toggle>
+                    <ion-input formControlName="type" [disabled]="!type " placeholder="What kind of word is it?"></ion-input>
+                    <ion-toggle [checked]="type" class="checked-toggle" (ionChange)="setType($event)"></ion-toggle>
                   </ion-item>
                  <ion-item lines="none">
                     <ion-button slot="end" (click)="applyFilters()" style="--background: #cc0000">Apply</ion-button>
