--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -26,7 +26,7 @@
         <ion-icon name="list"></ion-icon>
       </ion-fab-button>
     </ion-fab>
-  <ion-list *ngIf="!loading" lines="none">
+  <ion-list *ngIf="!loading && words.length !== 0" lines="none">
     <ion-item *ngFor="let word of words" >
         <ion-card style="min-width: 200px; width: auto">
           <ion-card-header>
@@ -71,6 +71,9 @@
         </ion-card>
     </ion-item>
   </ion-list>
+  <div id="container" *ngIf="!loading && words.length === 0">
+    <h4>No words!</h4>
+  </div>
   <!-- <div class="ion-padding custom-skeleton">
       <ion-skeleton-text animated style="width: 60%"></ion-skeleton-text>
       <ion-skeleton-text animated></ion-skeleton-text>
