05/02/21 Added a new page for viewing a word, Split the toolbar into 2 lines with the logout button appearing on the second one, added an error handler to getWords API method to remove the token and redirect to login page in the event 401 is returned, sharpened the UI

--- a/src/app/header/header.page.html
+++ b/src/app/header/header.page.html
@@ -3,11 +3,19 @@
       <ion-thumbnail slot="start">
           <ion-img src="assets/favicon.png"></ion-img>
       </ion-thumbnail>
+      <ion-buttons slot='start'>
+          <ion-back-button *ngIf="router.url !== '/tabs/tab1'" style="display: block !important" (click)="goBack()"></ion-back-button>
+      </ion-buttons>
     <ion-title>{{title}}</ion-title>
-    <ion-buttons slot="end">
-        <ion-button color="light" large (click)="authService.logout()">
-            LOGOUT
-          </ion-button>
-    </ion-buttons>
+  </ion-toolbar>
+  <ion-toolbar>
+        <ion-buttons slot="end">
+                <ion-text>
+                    Welcome {{user?.name}}
+                </ion-text>
+                <ion-button color="danger" large (click)="authService.logout()">
+                    LOGOUT
+                </ion-button>
+            </ion-buttons>
   </ion-toolbar>
 </ion-header>
