--- a/src/app/header/header.page.html
+++ b/src/app/header/header.page.html
@@ -4,7 +4,7 @@
           <ion-img src="assets/favicon.png"></ion-img>
       </ion-thumbnail>
       <ion-buttons slot='start'>
-          <ion-back-button *ngIf="router.url !== '/tabs/tab1'" style="display: block !important" (click)="goBack()"></ion-back-button>
+          <ion-button *ngIf="!(testURL())" (click)="goBack()"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
       </ion-buttons>
     <ion-title>{{title}}</ion-title>
   </ion-toolbar>
