--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -75,7 +75,7 @@
     <ion-list *ngIf="loading">
       <ion-item *ngFor="let x of skeletonArray">
         <ion-label>
-          <ion-skeleton-text animated style="width: 20%"></ion-skeleton-text>
+          <ion-skeleton-text animated></ion-skeleton-text>
         </ion-label>
       </ion-item>
     </ion-list>
