--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -10,9 +10,11 @@
               <ion-item>
                   <ion-label position="floating">Name</ion-label>
                   <ion-input formControlName="name" (ionChange)="checkWordForDuplicacy()"></ion-input>
-                  <ion-progress-bar *ngIf="checkingForUniqueness" type="indeterminate" style="background-color: red !important"></ion-progress-bar>
-                  <ion-note color="danger" *ngIf="!isUnique">Word already exists!</ion-note>
               </ion-item>
+              <!-- progress bar for uniqueness check-->
+              <ion-progress-bar *ngIf="checkingForUniqueness" type="indeterminate"></ion-progress-bar>
+              <ion-note color="danger" *ngIf="!isUnique  && name.dirty && checkSpaces(name.value)">Word already exists!</ion-note>
+              <ion-note color="success" *ngIf="isUnique && name.dirty && checkSpaces(name.value)">Ahh this word is a new one!</ion-note>
               <!--meaning field -->
               <ion-item>
                   <ion-label position="floating">Meaning</ion-label>
@@ -39,9 +41,10 @@
                 </ion-item>
                 <ion-label position="floating">Tags</ion-label>
                 <br>
-                <ion-searchbar type="text" debounce="500" (ionChange)="addSearchTag($event)" formControlName="tag"></ion-searchbar>
-                <ion-progress-bar *ngIf="loadingTags" type="indeterminate" style="background-color: red !important"></ion-progress-bar>
-                <ion-list *ngIf="areTagsAvailable" style="min-height: 50px; height: 300px; overflow: auto;">
+                <ion-searchbar type="text" debounce="500" (ionChange)="addSearchTag($event)" formControlName="tag">
+                    <ion-progress-bar *ngIf="loadingTags" type="indeterminate"></ion-progress-bar>
+                </ion-searchbar>
+                <ion-list *ngIf="areTagsAvailable" style="min-height: 50px; height: 300px; width: 100%; overflow: auto;">
                     <ion-item *ngFor="let item of loadedTags"><ion-button color="primary" style="--ion-color-primary: red !important; text-transform:none!important;" (click)="addTag(item)">{{item}}</ion-button></ion-item>
                 </ion-list>
               </ion-item>
