--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -25,3 +25,8 @@
   #container a {
     text-decoration: none;
   }
+  ion-progress-bar {
+    --background: white;
+    --buffer-background: white;
+    --progress-background: #cc0000;
+  }
