--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,1 +1,27 @@
 <app-header title="Profile"></app-header>
+<ion-content [fullscreen]="true">
+    <ion-card>
+        <ion-card-header>
+            <ion-card-title>
+                <ion-icon [name]="selectedIcon"></ion-icon>
+                {{selected}}
+            </ion-card-title>
+            <ion-card-subtitle>
+                <ion-button color="light" size="small" (click)="presentActionSheet()">   
+                        <ion-text>Select a different analytics tool</ion-text>
+                </ion-button>
+            </ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content *ngIf="!loading">
+            <img [src]="url1">
+        </ion-card-content>
+        <ion-card-content *ngIf="loading">
+                <ion-list>
+                    <ion-skeleton-text animated ></ion-skeleton-text>
+                    <ion-skeleton-text animated ></ion-skeleton-text>
+                    <ion-skeleton-text animated ></ion-skeleton-text>
+                    <ion-skeleton-text animated ></ion-skeleton-text>
+                </ion-list>
+              </ion-card-content>
+    </ion-card>
+</ion-content>
